# carl_demos

./: .travis.yml  CMakeLists.txt  package.xml
include/carl_demos/: sequential_tasks.h
launch/: basic_web_demo.launch  crowd_manipulation_demo.launch  web_demo.launch
src/: sequential_tasks.cpp  specific_actions.cpp
